2004-07-28  David Turner

	* sp-gradient.cpp, widgets/gradient-vector.cpp: fixed gradient handling to
	properly render gradients with sharp color boundaries

2004-07-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/inkview.cpp: Make the window title be the name of the
	  instead of the current file instead of the first file.

	* src/round-test.cpp: New unit-test file.

	* src/desktop.h, src/sp-desktop-widget.h:
	  Move SPDesktopWidget stuff from desktop.h to new file
	  sp-desktop-widget.h.

	* debian/*: Copy lots of changes from wolfi's official Debian package
	  of inkscape.
	  Also use separate builddir, which simplifies the `clean' target.

2004-07-24  MenTaLguY  <mental@rydia.net>

	* configure.in, src/Makefile.am, src/main.cpp, src/gc-core.h:
	  added libgc dependency

	* src/Makefile.am, traits/function.h:
	  added trait class for functions and C++ "functors"

	* src/Makefile.am, util/flip.h:
	  added flip() which, given a function with two arguments,
	  returns an identical function with its arguments reversed

2004-07-23  MenTaLguY  <mental@rydia.net>

	* src/Makefile.am, src/traits/reference.h, src/util/tuple.h:
	  added generic Tuple type

2004-07-23  Ted Gould  <ted@gould.cx>

	* src/attributes.cpp, src/attributes.h, src/sp-namedview.cpp,
	src/sp-namedview.h, src/dialogs/desktop-properties.cpp,
	src/display/canvas-grid.cpp, src/display/canvas-grid.h:

	Adding in the ability to have 'emphasis grid lines' where some lines are a
	different color than others.  In the default case every fifth grid line
	gets to be 0x11 darker alpha.  Nothing that will get in your way, but
	enough that you can find the spacing.  All parameters are changeable in
	document preferences.

2004-07-23  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* autogen.sh: Move unversioned automake to last resort.

2004-07-20  Kees Cook  <kees@outflux.net>

	* src/dialogs/desktop-preferences.cpp: corrected my usage of static
	  l18n strings.